Update REST model
* adding model day
* fixed bug weekends load very long