@@ -1,11 +1,13 @@
 package com.example.agputimetable.memory;
 
+import com.example.agputimetable.model.Day;
 import com.example.agputimetable.model.Discipline;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -13,15 +15,15 @@ import java.util.stream.Collectors;
 @Component
 @Log4j2
 public class TimetableMemory {
-    private final List<Discipline> memory;
+    private final List<Day> memory;
 
     public TimetableMemory(){
         memory = new ArrayList<>();
     }
 
-    public void addDiscipline(Discipline discipline){
-        log.info("added discipline: {}", discipline);
-        memory.add(discipline);
+    public void addDiscipline(Day day){
+        log.info("added day: {}", day);
+        memory.add(day);
         Thread cleaner = new Thread(() -> {
             log.info("task fo remove added");
             try {
@@ -29,20 +31,27 @@ public class TimetableMemory {
             } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             }
-            log.info("object now removing {}", discipline);
-            memory.remove(discipline);
+            log.info("object now removing {}", day);
+            memory.remove(day);
         });
         cleaner.setDaemon(true);
         cleaner.start();
     }
 
-    public List<Discipline> getDisciplineByDate(String groupName, String date){
+    public Day getDisciplineByDate(String groupName, String date){
         log.info("trying get discipline by date {} and by name {}\nDisciplines in memory:", date, groupName);
         memory.forEach(log::info);
 
-        return memory.stream()
-                .filter(discipline -> discipline.getDate().equals(date))
-                .filter(discipline -> discipline.getGroupName().equals(groupName))
-                .collect(Collectors.toList());
+        var res =  memory.stream()
+                .filter(day -> (day.getGroupName().equals(groupName) && day.getDate().equals(date)))
+                .toList();
+        if(!res.isEmpty())
+            return res.get(0);
+
+        return Day.builder()
+                .date(date)
+                .groupName(groupName)
+                .disciplines(Collections.emptyList())
+                .build();
     }
 }
